2009-11-11  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* dependencyobject.cpp: DependencyObject::Dispose (): we need to clear out
	the parent, we might still be alive after our parent has died, so don't
	crash if somebody does an upward tree walk in that case.

2009-11-11  Alan McGovern  <amcgovern@novell.com>

	* frameworkelement.cpp: If a template is applied when
	  FE::Measure is called, Surface::needs_measure will be set to
	  true even though the FE will not have a dirty measure when
	  the function completes. This can result in us having an
	  empty measure_list with Surface::needs_measure still set to
	  true, thus preventing us from arranging any elements and
	  hitting the 250 max passes. r: lewing

2009-11-11  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* value.h|in: Make checked_get_subclass and checked_get_exact only
	check in SANITY or DEBUG builds.

	* type.cpp|h|in: Only define IsSubclassOrSuperclassOf in SANITY or
	DEBUG builds.

2009-11-11  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* type.cpp|h|in: Remove unused method.

2009-11-11  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* layoutinformation.cpp: Fix a g++ warning.

2009-11-11  Larry Ewing  <lewing@novell.com>

	* uielement.cpp (DoArrange): if we haven't been arranged yet but
	we have a parent be sure to invalidate the parent before exiting.

	* frameworkelement.cpp: set the layout slot before calling
	arrange.

	Fixes DRT 423

	r: alan
	
2009-11-11  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* fontmanager.cpp|h: Cache system fonts.

	r: jeff

2009-11-11  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* deployment.cpp|h:
	* list.cpp|h: Inline a few methods which are used very often.

2009-11-10  Larry Ewing  <lewing@novell.com>

	* frameworkelement.cpp:
	* frameworkelement.h:
	* uielement.cpp: Rework hit testing to use InsideObject so that we
	don't have to guess at fill and stroke values when doing testing.
	Consider the global clip on short circuiting and the layout clip
	on the element.
