@@ -196,7 +196,12 @@ public:
 	bool IsDisposed ();
 	bool IsMultiThreadedSafe () { return (flags & MultiThreadedSafe) != 0; }
 	
-	Deployment *GetDeployment ();
+	Deployment *GetDeployment ()
+#if !SANITY
+	{ return deployment; }
+#endif
+	;
+
 	void SetCurrentDeployment (bool domain = true, bool register_thread = false);
 
 	// a public deployment getter for sanity checking without the warnings in GetDeployment.
